Playbar: Bloody Roller
Stargame: Slalom Code 0.3
          Space Ship
          White Force

Correct Dumps:
LTD: Columbia (previously supported was in fact one ROM from pecmen)
Taito: Lady Luck (sound dumps were the ones from Vegas before)
       Volley (formerly known as Voley Ball and also was missing main CPU dumps)
WMS: Contact, Disco Fever, Phoenix, World Cup (correct sound ROMs)

Clones:
Amazon Hunt II (French Free Play)
Amazon Hunt III (French Free Play)
Amazon Hunt III (rev. 1 French)
Amazon Hunt III (rev. 1 French Free Play)
Arena (Free Play)
Arena (French)
Arena (French Free Play)
Arena (German)
Arena (German Free Play)
Arena (rev. 1 Free Play)
Bad Girls (Free Play)
Bad Girls (French)
Bad Girls (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Bad Girls (German)
Bad Girls (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Big House (Free Play)
Big House (French)
Big House (French Free Play)
Big House (German)
Big House (German Free Play)
Bone Busters Inc. (Free Play)
Bone Busters Inc. (French Free Play)
Bone Busters Inc. (German)
Bone Busters Inc. (German Free Play)
Bounty Hunter (Free Play)
Bounty Hunter (German)
Bounty Hunter (German Free Play)
Caveman (Evolution, unofficial MOD)
Cheetah (Blue cabinet)
Chicago Cubs Triple Play (Free Play)
Chicago Cubs Triple Play (rev. 1 Free Play)
Diamond Lady (Free Play)
Diamond Lady (French)
Diamond Lady (French Free Play)
Diamond Lady (German)
Diamond Lady (German Free Play)
Excalibur
Excalibur (Free Play)
Excalibur (French Free Play)
Excalibur (German)
Excalibur (German Free Play)
Genesis (Free Play)
Genesis (French)
Genesis (French Free Play)
Genesis (German)
Genesis (German Free Play)
Gold Wings (Free Play)
Gold Wings (French)
Gold Wings (French Free Play)
Gold Wings (German)
Gold Wings (German Free Play)
Harley-Davidson (Bally, L-2 and D-2)
Haunted House (rev. 3 unofficial MOD)