@@ -43,6 +43,7 @@ LTD: Columbia (previously supported was in fact one ROM from pecmen)
 Taito: Lady Luck (sound dumps were the ones from Vegas before)
        Volley (formerly known as Voley Ball and also was missing main CPU dumps)
 WMS: Contact, Disco Fever, Phoenix, World Cup (correct sound ROMs)
+     Demolition Man (H-5B Coin Play), Demolition Man (DH-5B Coin Play LED Ghost Fix), Demolition Man (H-6B Coin Play) (all repatched correctly)
 
 Clones:
 Amazon Hunt II (French Free Play)
@@ -127,6 +128,7 @@ Raven (Free Play)
 Raven (German)
 Raven (German Free Play)
 Raven (rev. 1 Free Play)
+Road Show (Prototype P-3 Sound ROM, combined with LX-2 Game ROM for now)
 Robo-War (Free Play)
 Robo-War (French)
 Robo-War (French Free Play)
